--- a/package.json
+++ b/package.json
@@ -7,15 +7,22 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.2.0",
     "swagger": "^0.7.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
